--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Please press your favorite buttons...</h1>
+        <h1>Please press your favorite keyboard keys C G D to reveal mucical notes...</h1>
     </header>
     <main>
         <div class="animation-container">
