--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <p>Prepared by Teacher Ronald</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js"></script><button class="key-btn" data-key="c">C</button>
+<button class="key-btn" data-key="g">G</button>
+<button class="key-btn" data-key="d">D</button>
+
 </body>
 </html
