--- a/index.html
+++ b/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sound Animation</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sound Animation</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>Please press your favorite keyboard keys C G D to reveal mucical notes...</h1>
-    </header>
-    <main>
-        <div class="animation-container">
-            <div class="animation"></div>
-        </div>
-    </main>
-    <footer>
-        <p>Prepared by Teacher Ronald</p>
-    </footer>
-
-    <script src="script.js"></script><button class="key-btn" data-key="c">C</button>
-<button class="key-btn" data-key="g">G</button>
-<button class="key-btn" data-key="d">D</button>
-
+  <header>
+    <h1>Please press your favorite keyboard keys C G D to reveal musical notes...</h1>
+  </header>
+  <main>
+    <div class="animation-container">
+      <div class="animation"></div>
+    </div>
+    <button class="key-btn" data-key="c">C</button>
+    <button class="key-btn" data-key="g">G</button>
+    <button class="key-btn" data-key="d">D</button>
+  </main>
+  <footer>
+    <p>Prepared by Teacher Ronald</p>
+  </footer>
+  <script src="script.js"></script>
 </body>
-</html
+</html>
